# oslbuildwin

./: .gitignore  .gitmodules  LICENSE  README.md  build.py
patches/OpenShadingLanguage/: CMakeLists.txt.patch  externalpackages.cmake.patch  flexbison.cmake.patch  oslgram.y.patch  osllex.l.patch
patches/libjpeg/: CMakeLists.txt.patch
patches/libtiff/: CMakeLists.txt.patch
patches/llvm/: CostAllocator.h.patch  InstrProfReader.h.patch  Math.h.patch
patches/oiio/: idiff.cpp.patch  oiiotool.cpp.patch  py_deepdata.cpp.patch
phase1/: CMakeLists.txt
phase2/: CMakeLists.txt
phase3/: CMakeLists.txt
phase4/: CMakeLists.txt
phase5/: CMakeLists.txt
