cmake_minimum_required(VERSION 2.8)
get_filename_component(ABS_INSTALL "${CMAKE_BINARY_DIR}/../../install" ABSOLUTE)
set (CMAKE_INSTALL_PREFIX ${ABS_INSTALL})
set (ZLIB_LIBRARY zlibd.lib)
set (ZLIB_INCLUDE_DIR ${MY_INSTALL_PATH}/install/include)
#set (ILMBASE_INCLUDE_DIR ${MY_INSTALL_PATH}/include/OpenEXR)
#set (ILMBASE_HALF_LIBRARIES ${MY_INSTALL_PATH}/lib)
#set (ILMBASE_IEX_LIBRARIES ${MY_INSTALL_PATH}/lib)
#set (ILMBASE_IMATH_LIBRARIES ${MY_INSTALL_PATH}/lib)
#set (ILMBASE_ILMTHREAD_LIBRARIES ${MY_INSTALL_PATH}/lib)
set(ILMBASE_PACKAGE_PREFIX ${MY_INSTALL_PATH})
set(ZLIB_ROOT {MY_INSTALL_PATH}/install)
#include_directories(${MY_INSTALL_PATH})
link_directories(${MY_INSTALL_PATH}/install/lib)
add_subdirectory(openexr/OpenEXR)
add_subdirectory(libpng)
add_subdirectory(libtiff)