cmake_minimum_required(VERSION 2.8)
get_filename_component(ABS_INSTALL "${CMAKE_BINARY_DIR}/../../install" ABSOLUTE)
set (CMAKE_INSTALL_PREFIX ${ABS_INSTALL})
set (ILMBASE_INCLUDE_DIR ${ABS_INSTALL}/include/OpenEXR)
set (ILMBASE_HALF_LIBRARIES ${ABS_INSTALL}/lib)
set (ILMBASE_IEX_LIBRARIES ${ABS_INSTALL}/lib)
set (ILMBASE_IMATH_LIBRARIES ${ABS_INSTALL}/lib)
set (ILMBASE_ILMTHREAD_LIBRARIES ${ABS_INSTALL}/lib)
set(ILMBASE_PACKAGE_PREFIX ${ABS_INSTALL})
set (JPEG_LIBRARY jpeg.lib)
set (JPEG_INCLUDE_DIR ${ABS_INSTALL}/include)
link_directories(${ABS_INSTALL}/lib)
# Ignore warnings to increase signal to noise rate
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W0")
add_subdirectory(libpng)
add_subdirectory(libtiff)
add_subdirectory(openexr/OpenEXR)
