cmake_minimum_required(VERSION 2.8)
set (MY_INSTALL_PATH ${CMAKE_BINARY_DIR}/../../install)
set (CMAKE_INSTALL_PREFIX ${MY_INSTALL_PATH})
set(CMAKE_PREFIX_PATH ${MY_INSTALL_PATH};${MY_INSTALL_PATH}/install;../../boost_1_59_0)
set(BOOST_LIBRARYDIR D:/work/code/oslbuild/boost_1_59_0/lib64-msvc-12.0)
include_directories(${CMAKE_BINARY_DIR}/../../phase3/oiio/src/include)
#set(OSL_BUILD_CPP11 1)
set(USE_CPP11 1)
#set(LLVM_DIRECTORY ${MY_INSTALL_PATH})
set(LLVM_FIND_QUIETLY 0)
set(LLVM_STATIC 1)
include_directories(${CMAKE_BINARY_DIR}/../../phase5/OpenShadingLanguage/src/include)
add_subdirectory(OpenShadingLanguage)